Nova estrutura do cupom
Reajuste no cupom de desconto

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-    #t
-    #t
-    #t
+    
+    <p> Digite o cupom de desconto </p>
+    <p> Valor: </p>
+    <p> Item: </p>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
